# DualSense-C-SDK

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  findings.md  progress.md  task_plan.md
cmake/: dualsenseConfig.cmake.in
config/: ship_controls.cfg
docs/: known-limitations.md  packaging.md  productization-plan.md  protocol-notes.md  release-checklist.md  ship-demo-test-steps.md  user-guide.md
examples/cmake-consumer/: CMakeLists.txt  main.cpp
include/dualsense/: dualsense.h  dualsense.hpp
samples/: c_api_sample.c  cpp_sample.cpp  csharp_pinvoke_sample.cs
src/: audio_wasapi_win.cpp  core.cpp  core.h  dualsense_c_api.cpp  hid_backend_win.cpp  output_report.cpp  output_report.h  report_parser.cpp  report_parser.h
tests/: test_main.cpp
tools/: dualsense_diag.cpp  dualsense_ship_demo.cpp  glb_loader.cpp  glb_loader.h  ship_config.h  ship_controls.h  ship_feedback.h  ship_systems.h  wav_pcm.cpp  wav_pcm.h
